--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
- <p>Add a new line of paragraph</p>
+ <p>My name is Imama.</p>
 
 </body>
 </html> 
