--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
- <p>My name is Imama.</p>
+<p>My name is Imama.</p>
+<p>I am a Formula One fan.</p>
 
 </body>
 </html> 
