Updated index.html with a new paragraph
this is the third edit in the index.html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>My name is Imama.</p>
 <p>I am a Formula One fan.</p>
+<p>My favorite team is formula one and favorite driver is Charles Leclerc for some obvious reasons.</p>
 
 </body>
 </html> 
